--- a/pavyzdys-kursinis-bibliografija.bib
+++ b/pavyzdys-kursinis-bibliografija.bib
@@ -40,7 +40,6 @@
 	Date-Modified = {2011-09-03 20:51:36 +0000},
 	Howpublished = {\url{http://www.sfgate.com/cgi-bin/article.cgi?f=/e/a/1998/07/09/NEWS13622.dtl}},
 	Note = "{2011 m. rugpjūčio 28 d.}",
-	Note = "{2011 m. rugpjūčio 28 d.}",
 	Title = {In Israel, Pirate Radio Plies Mainstream},
 	Year = {1998}}
 
@@ -118,7 +117,7 @@
 	Author = {Ted M. {COOPMAN}},
 	Date-Added = {2011-09-03 20:40:51 +0000},
 	Date-Modified = {2011-09-03 20:42:02 +0000},
-	Journal = {Journal of Broadcasting & Electronic Media},
+	Journal = {Journal of Broadcasting \& Electronic Media},
 	Number = {4},
 	Pages = {582-602},
 	Title = "{FCC enforcement difficulties with unlicensed micro radio}",
@@ -416,7 +415,7 @@
 	Date-Modified = {2011-09-03 20:09:19 +0000},
 	Isbn = {1579582494},
 	Pages = {1696},
-	Publisher = {Taylor & Francis},
+	Publisher = {Taylor \& Francis},
 	Address = {London},
 	Title = {Encyclopedia of Radio},
 	Year = {2003}}
